[filterPills] fix focus visible for checkboxes

--- a/packages/scss/src/components/filterPill/index.scss
+++ b/packages/scss/src/components/filterPill/index.scss
@@ -44,6 +44,10 @@
 	&.mod-checkbox {
 		@include checkbox;
 
+		&:has(.filterPill-checkbox-input:focus-visible) {
+			@include focusVisible;
+		}
+
 		&:has(.filterPill-checkbox-input:checked) {
 			@include checkboxChecked;
 
